Added base classes for webservices integration and utility.

--- a/android-native/ThrillCity/common/src/main/res/values/strings.xml
+++ b/android-native/ThrillCity/common/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Common</string>
+
+    <string name="redirect_title">Leave App to visit</string>
+    <string name="redirect_ok">OK</string>
+    <string name="redirect_cancel">Cancel</string>
+
 </resources>
